@@ -13,9 +13,11 @@
   </ul>
  </div>
 
-<?php if ($this->canCompose): ?>
  <div data-role="footer" class="ui-bar" data-position="fixed">
+  <a href="" data-role="button" id="imp-folders-showall"><?php echo _("Show All") ?></a>
+  <a href="" data-role="button" id="imp-folders-showpoll" style="display:none"><?php echo _("Show Polled") ?></a>
+<?php if ($this->canCompose): ?>
   <a href="#compose" data-role="button" data-icon="plus"><?php echo _("New Message") ?></a>
- </div>
 <?php endif ?>
+ </div>
 </div>
